[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/misc/meteor.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/earth_type_icon.png" type="Texture" id=2]
[ext_resource path="res://assets/particles/meteor_burst_particle.png" type="Texture" id=3]
[ext_resource path="res://scripts/skills/RavenProjectile.gd" type="Script" id=4]

[sub_resource type="CanvasItemMaterial" id=11]

[sub_resource type="ParticlesMaterial" id=10]
flag_disable_z = true
gravity = Vector3( 0, -120, 0 )
angular_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.65

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 45.0
angular_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="CircleShape2D" id=7]
radius = 20.0

[sub_resource type="Animation" id=13]
resource_name = "default"
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="RavenProjectile" type="Area2D"]
scale = Vector2( 1.3, 1.3 )
collision_layer = 129
collision_mask = 129
script = ExtResource( 4 )

[node name="TrailParticles" type="Particles2D" parent="."]
material = SubResource( 11 )
scale = Vector2( 2, 2 )
amount = 4
preprocess = 0.5
process_material = SubResource( 10 )
texture = ExtResource( 1 )

[node name="ExplosionParticles" type="Particles2D" parent="."]
rotation = -1.5708
scale = Vector2( 2, 2 )
emitting = false
amount = 10
lifetime = 0.85
one_shot = true
speed_scale = 2.0
process_material = SubResource( 12 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="." groups=["Earth"]]
collision_layer = 129
collision_mask = 129

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 0.666667, 1.4625 )
scale = Vector2( 1.39423, 1.04687 )
polygon = PoolVector2Array( -17.3333, -20, 17.3333, -20, 16, 3.33333, 7.33333, 17.3333, -6, 17.3333, -16, 3.33333 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 13 )

[node name="GroundedGaugeArea" type="Area2D" parent="." groups=["200", "EarthGauge"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GroundedGaugeArea"]
position = Vector2( 0.666667, 1.4625 )
scale = Vector2( 1.39423, 1.04687 )
polygon = PoolVector2Array( -17.3333, -20, 17.3333, -20, 16, 3.33333, 7.33333, 17.3333, -6, 17.3333, -16, 3.33333 )

[connection signal="body_entered" from="." to="." method="_on_RavenProjectile_body_entered"]
